# AutoProDev

CI-CD/: ReadMe.docx
CMakeSample/: CMakeLists.txt  ReadMe.txt
CMakeSample/src/: main.cpp
CMakeSample/src/utils/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
CodeFormat-Analysis/: ReadMe.docx
DoxygenGen/: ReadMe.docx
UnitTesting-AutomatedTesting/: ReadMe.docx
